--- a/pytorch_learning_02.ipynb
+++ b/pytorch_learning_02.ipynb
@@ -5,12 +5,11 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "2lLzEBO5BV_R",
-        "SF3luxAnVDXZ"
+        "mqsRg4l8UwH6",
+        "2lLzEBO5BV_R"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPKAk4DqfGNik0JdP5X1NWB",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMSOFfs6UwX04lfYlPBr2d3"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,16 +21,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/GubioGL/Aprendendo_pytorch/blob/main/pytorch_learning_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -756,7 +745,7 @@
         },
         "outputId": "36104487-28c6-4db6-83f5-8659d6666c32"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -782,7 +771,7 @@
         "id": "9XtEDCrHmeAA",
         "outputId": "1c3dc7cc-3cb7-4da5-aca5-cda4a909aa57"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -832,7 +821,7 @@
         "id": "opFP9ZcIkC_A",
         "outputId": "c1ce072f-4b58-4c77-f43c-662c6954ea8a"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +899,7 @@
         "id": "5HalamMzBu6A",
         "outputId": "3d50df61-23bc-47fa-ea5b-094fd62a7cfa"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,7 +953,7 @@
         "id": "tIMK0B0BkL2R",
         "outputId": "f66c565c-9ecb-4828-c63d-408b046046ac"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,7 +1008,7 @@
         "id": "3KAibV9gLT31",
         "outputId": "5eb1b4cd-925c-410d-b9d4-588b0f45a71d"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,24 +1039,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Classificação com multi label"
-      ],
-      "metadata": {
-        "id": "SF3luxAnVDXZ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "K7-TzY8XVMRK"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
