--- a/pytorch_leaning_01_GPU.ipynb
+++ b/pytorch_leaning_01_GPU.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMqnEiYdrq6f71BbvJ7i36B",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,18 +17,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/GubioGL/Aprendendo_pytorch/blob/main/pytorch_leaning_01_GPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0nu6K_S1iO-z"
       },
@@ -69,7 +57,7 @@
         "id": "H-VOX-EAiYIv",
         "outputId": "00dd6e40-9647-4e5b-e72f-6eab5a71789c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -98,7 +86,7 @@
       "metadata": {
         "id": "c3giHPOeib9n"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +97,7 @@
       "metadata": {
         "id": "JJgllLk2jf0Y"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +113,7 @@
         "id": "uQWR281piu1_",
         "outputId": "543d6d75-d227-4130-d23e-11ac3a0b305c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +141,7 @@
         "id": "XYvedPmui2DP",
         "outputId": "d9707628-7a6d-4558-91a7-25bb94464062"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +193,7 @@
         "id": "Rhet-2jzjPF_",
         "outputId": "8a6b02c4-5574-4635-bc75-ea869a82261b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +232,7 @@
         "id": "Wzn_efbQkiRf",
         "outputId": "67894bca-2c22-41b7-92a5-c35686440e23"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +252,7 @@
       "metadata": {
         "id": "N0XmDBfFkeGu"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     }
   ]
